force-app/main/default/objects/Table_Columns__c/Table_Columns__c.object-meta.xml
<CustomObject>
    <label>Table Columns</label>
    <nameField>
        <label>Table Columns Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Table Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>