force-app/main/default/objects/Table_Columns__c/fields/Additional_Column__c.field-meta.xml
<CustomField>
    <fullName>Additional_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Column?</label>
    <type>Checkbox</type>
</CustomField>