force-app/main/default/objects/Table_Columns__c/fields/Column_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_API_Name__c</fullName>
    <label>Column API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>