force-app/main/default/objects/Table_Columns__c/fields/Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Type__c</fullName>
    <label>Filter_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>exact</fullName>
            </value>
            <value>
                <fullName>starts_with</fullName>
            </value>
            <value>
                <fullName>range</fullName>
            </value>
            <value>
                <fullName>multi_select</fullName>
            </value>
            <value>
                <fullName>date_range</fullName>
            </value>
            <value>
                <fullName>boolean</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>