force-app/main/default/objects/Table_Columns__c/fields/Is_Filterable__c.field-meta.xml
<CustomField>
    <fullName>Is_Filterable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Filterable</label>
    <type>Checkbox</type>
</CustomField>