force-app/main/default/objects/Table_Columns__c/fields/Is_Groupable__c.field-meta.xml
<CustomField>
    <fullName>Is_Groupable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Groupable</label>
    <type>Checkbox</type>
</CustomField>