force-app/main/default/objects/Table_Columns__c/fields/Is_Searchable__c.field-meta.xml
<CustomField>
    <fullName>Is_Searchable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Searchable</label>
    <type>Checkbox</type>
</CustomField>