force-app/main/default/objects/Table_Columns__c/fields/Max_Length__c.field-meta.xml
<CustomField>
    <fullName>Max_Length__c</fullName>
    <label>Max_Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>