force-app/main/default/objects/Table_Columns__c/fields/Object_Reference__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference__c</fullName>
    <label>Object Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>