force-app/main/default/objects/Table_Columns__c/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <label>Table Name</label>
    <referenceTo>Table__c</referenceTo>
    <relationshipLabel>Table Columns</relationshipLabel>
    <relationshipName>Table_Columns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>