force-app/main/default/objects/Table_Columns__c/fields/Wrap_Text__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrap Text</label>
    <type>Checkbox</type>
</CustomField>