force-app/main/default/objects/Table_Columns__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Is_Visible__c</columns>
    <columns>NAME</columns>
    <columns>Table_Name__c</columns>
    <columns>Index__c</columns>
    <columns>Object_Reference__c</columns>
    <columns>Additional_Column__c</columns>
    <columns>Column_API_Name__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Is_Filterable__c</columns>
    <columns>Is_Editable__c</columns>
    <columns>Is_Sortable__c</columns>
    <columns>Lookup_Field_API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>